--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^16.11.5",
     "@types/ws": "^8.2.0",
+    "discord-sync-commands": "^0.3.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.4"
