docs: add API docs website

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,16 @@
     "strict": true,
     "resolveJsonModule": true,
     "strictNullChecks": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["lib/*"]
+  "exclude": ["lib/*", "node_modules/*"],
+  "typedocOptions": {
+    "entryPoints": ["src/index.ts"],
+    "out": "docs/api-docs",
+    "exclude": ["node_modules"],
+    "excludePrivate": true,
+    "hideGenerator": true
+  }
 }
