--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
+    "build:docs": "typedoc",
+    "prepublish": "yarn build:docs",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" \"example/**/*.ts\" \"example/**/*.js\" ",
     "lint": "tslint -p tsconfig.json",
     "example": "yarn build & node ./example/index.js"
@@ -35,6 +37,7 @@
     "discord-sync-commands": "^0.3.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.23.21",
     "typescript": "^4.4.4"
   },
   "directories": {
