--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hunteroi/discord-server-generator",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "A framework to generate Discord guild categories, channels and roles, built with DiscordJS",
   "main": "lib/index.js",
   "scripts": {
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/hunteroi/discord-server-generator#readme",
   "dependencies": {
-    "discord.js": "^13.2.0"
+    "discord.js": "14.x"
   },
   "devDependencies": {
     "@types/node": "^16.11.5",
