--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   },
   "description": "A framework to generate Discord guild categories, channels and roles, built with DiscordJS",
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
+    "@biomejs/biome": "1.6.4",
     "@types/node": "^16.11.5",
     "@types/ws": "^8.2.0",
     "discord-sync-commands": "^0.3.0",
     "discord.js": "^14.14.1",
-    "eslint": "^9.0.0",
     "typedoc": "^0.25.13",
-    "typescript": "^5.4.4",
-    "typescript-eslint": "^7.6.0"
+    "typescript": "^5.4.4"
   },
   "directories": {
     "lib": "lib"
@@ -43,7 +41,7 @@
     "build": "tsc",
     "build:docs": "typedoc",
     "example": "yarn build & node ./examples/index.js",
-    "lint": "eslint ./src",
+    "lint": "biome check --apply ./src",
     "prepublish": "yarn lint && yarn build && yarn build:docs"
   },
   "type": "module",
