--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "description": "A framework to generate Discord guild categories, channels and roles, built with DiscordJS",
   "devDependencies": {
     "@biomejs/biome": "1.6.4",
-    "@types/node": "^16.11.5",
-    "@types/ws": "^8.2.0",
+    "@types/node": "^20.14.6",
+    "@types/ws": "^8.5.10",
     "discord-sync-commands": "^0.3.0",
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.15.3",
     "typedoc": "^0.25.13",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.5"
   },
   "directories": {
     "lib": "lib"
@@ -40,10 +40,10 @@
   "scripts": {
     "build": "tsc",
     "build:docs": "typedoc",
-    "example": "yarn build & node ./examples/index.js",
     "lint": "biome check --apply ./src",
-    "prepublish": "yarn lint && yarn build && yarn build:docs"
+    "prepublish": "yarn lint && yarn build && yarn build:docs",
+    "start": "yarn build && tsc ./examples/index.ts --target esnext --module nodenext --moduleResolution nodenext && node ./examples/index.js"
   },
   "type": "module",
-  "version": "2.0.2"
+  "version": "2.1.0"
 }
